Added projects to projects.html

--- a/index.html
+++ b/index.html
@@ -45,6 +45,43 @@
 							<p>Full-Stack Software Engineer</p>
 						</div>
 					</section>
+				
+				<!-- Four -->
+				<section id="four" class="wrapper alt style1">
+					<div class="inner">
+						<h2 class="major">Highlighted Projects</h2>
+						<p>Here is an interactive list of my most impactful projects.</p>
+						<section class="features">
+							<article>
+								<a href="projects.html" class="image"><img src="images/pic04.jpg" alt="" /></a>
+								<h3 class="major">Personal Finance application</h3>
+								<p>React app using PostGreSQL to budget and track finances.</p>
+								<a href="projects.html" class="special">Learn more</a>
+							</article>
+							<article>
+								<a href="projects.html" class="image"><img src="images/pic05.jpg" alt="" /></a>
+								<h3 class="major">STL Non-Profit Web App</h3>
+								<p>Lorem ipsum dolor sit amet, consectetur adipiscing vehicula id nulla dignissim dapibus ultrices.</p>
+								<a href="projects.html" class="special">Learn more</a>
+							</article>
+							<article>
+								<a href="projects.html" class="image"><img src="images/pic06.jpg" alt="" /></a>
+								<h3 class="major">CGAN Album Art Generator</h3>
+								<p>Lorem ipsum dolor sit amet, consectetur adipiscing vehicula id nulla dignissim dapibus ultrices.</p>
+								<a href="projects.html" class="special">Learn more</a>
+							</article>
+							<article>
+								<a href="projects.html" class="image"><img src="images/pic07.jpg" alt="" /></a>
+								<h3 class="major">NFL Defensive Stat Kaggle Competition</h3>
+								<p>Lorem ipsum dolor sit amet, consectetur adipiscing vehicula id nulla dignissim dapibus ultrices.</p>
+								<a href="projects.html" class="special">Learn more</a>
+							</article>
+						</section>
+						<ul class="actions">
+							<li><a href="#" class="button">Browse All</a></li>
+						</ul>
+					</div>
+				</section>
 
 				<!-- Wrapper -->
 					<section id="wrapper">
@@ -85,50 +122,13 @@
 								</div>
 							</section>
 
-						<!-- Four -->
-							<section id="four" class="wrapper alt style1">
-								<div class="inner">
-									<h2 class="major">List of Projects</h2>
-									<p>Here is an interactive list of all my projects.</p>
-									<section class="features">
-										<article>
-											<a href="#" class="image"><img src="images/pic04.jpg" alt="" /></a>
-											<h3 class="major">Personal Finance application</h3>
-											<p>Lorem ipsum dolor sit amet, consectetur adipiscing vehicula id nulla dignissim dapibus ultrices.</p>
-											<a href="#" class="special">Learn more</a>
-										</article>
-										<article>
-											<a href="#" class="image"><img src="images/pic05.jpg" alt="" /></a>
-											<h3 class="major">STL Non-Profit Web App</h3>
-											<p>Lorem ipsum dolor sit amet, consectetur adipiscing vehicula id nulla dignissim dapibus ultrices.</p>
-											<a href="#" class="special">Learn more</a>
-										</article>
-										<article>
-											<a href="#" class="image"><img src="images/pic06.jpg" alt="" /></a>
-											<h3 class="major">CGAN Album Art Generator</h3>
-											<p>Lorem ipsum dolor sit amet, consectetur adipiscing vehicula id nulla dignissim dapibus ultrices.</p>
-											<a href="#" class="special">Learn more</a>
-										</article>
-										<article>
-											<a href="#" class="image"><img src="images/pic07.jpg" alt="" /></a>
-											<h3 class="major">NFL Defensive Stat Kaggle Competition</h3>
-											<p>Lorem ipsum dolor sit amet, consectetur adipiscing vehicula id nulla dignissim dapibus ultrices.</p>
-											<a href="#" class="special">Learn more</a>
-										</article>
-									</section>
-									<ul class="actions">
-										<li><a href="#" class="button">Browse All</a></li>
-									</ul>
-								</div>
-							</section>
-
 					</section>
 
 				<!-- Footer -->
 					<section id="footer">
 						<div class="inner">
 							<h2 class="major">Get in touch</h2>
-							<p>Cras mattis ante fermentum, malesuada neque vitae, eleifend erat. Phasellus non pulvinar erat. Fusce tincidunt, nisl eget mattis egestas, purus ipsum consequat orci, sit amet lobortis lorem lacus in tellus. Sed ac elementum arcu. Quisque placerat auctor laoreet.</p>
+							<p>Have any questions or want to work together? <br> Leave your details, and I'll get back to you as soon as I can.</p>
 							<form method="post" action="#">
 								<div class="fields">
 									<div class="field">
@@ -149,19 +149,13 @@
 								</ul>
 							</form>
 							<ul class="contact">
-								<li class="icon solid fa-home">
-									Untitled Inc<br />
-									1234 Somewhere Road Suite #2894<br />
-									Nashville, TN 00000-0000
-								</li>
-								<li class="icon solid fa-phone">(000) 000-0000</li>
-								<li class="icon solid fa-envelope"><a href="#">information@untitled.tld</a></li>
-								<li class="icon brands fa-twitter"><a href="#">twitter.com/untitled-tld</a></li>
-								<li class="icon brands fa-facebook-f"><a href="#">facebook.com/untitled-tld</a></li>
-								<li class="icon brands fa-instagram"><a href="#">instagram.com/untitled-tld</a></li>
+								<li class="icon solid fa-envelope"><a href="#">heller_blake@yahoo.com</a></li>
+								<li class="icon brands fa-linkedin-in"><a href="https://www.linkedin.com/in/blake-heller-25a948210/">LinkedIn</a></li>
+								<li class="icon brands fa-github"><a href="https://github.com/BHeller77">GitHub</a></li>
+								<li class="icon solid fa-home">Chicago, IL</li>
 							</ul>
 							<ul class="copyright">
-								<li>&copy; Untitled Inc. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+								<li>&copy; Blake Heller @2025</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
 							</ul>
 						</div>
 					</section>
