--- a/projects.html
+++ b/projects.html
@@ -1,10 +1,141 @@
-<h2>Projects</h2>
+<!DOCTYPE HTML>
+<!--
+	Solid State by HTML5 UP
+	html5up.net | @ajlkn
+	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
+-->
+<html>
+	<head>
+		<title>Generic - Solid State by HTML5 UP</title>
+		<meta charset="utf-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+		<link rel="stylesheet" href="assets/css/main.css" />
+		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
+	</head>
+	<body class="is-preload">
 
-<h3>Non-Profit Website</h3>
-<p>Created a website for a non-profit organization that allows users to donate to the organization and learn more about the organization's mission.</p>
+		<!-- Page Wrapper -->
+			<div id="page-wrapper">
 
-<h3>CGAN for Album Art Classification</h3>
-<p>Developed a conditional generative adversarial network (CGAN) that classifies album art by genre.</p>
+				<!-- Header -->
+					<header id="header">
+						<nav>
+							<a href="#menu">Menu</a>
+						</nav>
+					</header>
 
-<h3>Football Tackling Stat</h3>
-<p>Created a program that tracks a football player's tackling statistics.</p>
+				<!-- Menu -->
+					<nav id="menu">
+						<div class="inner">
+							<h2>Menu</h2>
+							<ul class="links">
+								<li><a href="index.html">Home</a></li>
+								<li><a href="generic.html">Generic</a></li>
+								<li><a href="elements.html">Elements</a></li>
+								<li><a href="#">Log In</a></li>
+								<li><a href="#">Sign Up</a></li>
+							</ul>
+							<a href="#" class="close">Close</a>
+						</div>
+					</nav>
+
+				<!-- Wrapper -->
+                <section id="wrapper">
+                    <header>
+                        <div class="inner">
+                            <h2>All me personal projects</h2>
+                            <p>Included are descriptions, skills I learned, GitHub links, and some live versions.</p>
+                        </div>
+                    </header>
+
+                    <!-- Content -->
+                        <div class="wrapper">
+                            <div class="inner">
+                                <section>
+                                    <a href="#" class="image"><img src="images/pic01.jpg" alt="" /></a>
+                                    <div class="content">
+                                        <h2 class="major">Personal Finances Tracker</h2>
+                                        <p>Stuff to stuffy</p>
+                                        <a href="#" class="special">Learn more</a>
+                                    </div>
+                                </section>
+
+                                <section>
+                                    <a href="#" class="image"><img src="images/pic02.jpg" alt="" /></a>
+                                    <div class="content">
+                                        <h2 class="major">Non-Profit Website</h2>
+                                        <p>Created a website for a non-profit organization that allows users to donate to the organization and learn more about the organization's mission.</p>
+                                        <a href="#" class="special">Learn more</a>
+                                    </div>
+                                </section>
+
+                                <section>
+                                    <a href="#" class="image"><img src="images/pic03.jpg" alt="" /></a>
+                                    <div class="content">
+                                        <h2 class="major">CGAN for Album Art Classification</h2>
+                                        <p>Developed a conditional generative adversarial network (CGAN) that classifies album art by genre.</p>
+                                        <a href="https://github.com/alexlawless12/album-art-generator" class="special">Learn more</a>
+                                    </div>
+                                </section>
+
+                                <section>
+                                    <a href="#" class="image"><img src="images/pic04.jpg" alt="" /></a>
+                                    <div class="content">
+                                        <h2 class="major">Football Tackling Stat</h2>
+                                        <p>Created a program that tracks a football player's tackling statistics.</p>
+                                        <a href="https://github.com/BHeller77/BigData" class="special">Learn More</a>
+                                    </div>
+                                </section>
+                            </div>
+                        </div>
+
+                </section>
+
+				<!-- Footer -->
+                <section id="footer">
+                    <div class="inner">
+                        <h2 class="major">Get in touch</h2>
+                        <p>Have any questions or want to work together? <br> Leave your details, and I'll get back to you as soon as I can.</p>
+                        <form method="post" action="#">
+                            <div class="fields">
+                                <div class="field">
+                                    <label for="name">Name</label>
+                                    <input type="text" name="name" id="name" />
+                                </div>
+                                <div class="field">
+                                    <label for="email">Email</label>
+                                    <input type="email" name="email" id="email" />
+                                </div>
+                                <div class="field">
+                                    <label for="message">Message</label>
+                                    <textarea name="message" id="message" rows="4"></textarea>
+                                </div>
+                            </div>
+                            <ul class="actions">
+                                <li><input type="submit" value="Send Message" /></li>
+                            </ul>
+                        </form>
+                        <ul class="contact">
+                            <li class="icon solid fa-envelope"><a href="#">heller_blake@yahoo.com</a></li>
+                            <li class="icon brands fa-linkedin-in"><a href="https://www.linkedin.com/in/blake-heller-25a948210/">LinkedIn</a></li>
+                            <li class="icon brands fa-github"><a href="https://github.com/BHeller77">GitHub</a></li>
+                            <li class="icon solid fa-home">Chicago, IL</li>
+                        </ul>
+                        <ul class="copyright">
+                            <li>&copy; Blake Heller @2025</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+                        </ul>
+                    </div>
+                </section>
+
+        </div>
+
+		<!-- Scripts -->
+			<script src="assets/js/jquery.min.js"></script>
+			<script src="assets/js/jquery.scrollex.min.js"></script>
+			<script src="assets/js/browser.min.js"></script>
+			<script src="assets/js/breakpoints.min.js"></script>
+			<script src="assets/js/util.js"></script>
+			<script src="assets/js/main.js"></script>
+
+	</body>
+</html>
