--- a/projects.html
+++ b/projects.html
@@ -15,39 +15,38 @@
 	<body class="is-preload">
 
 		<!-- Page Wrapper -->
-			<div id="page-wrapper">
+        <div id="page-wrapper">
 
-				<!-- Header -->
-					<header id="header">
-						<nav>
-							<a href="#menu">Menu</a>
-						</nav>
-					</header>
+            <!-- Header -->
+                <header id="header" class="alt">
+                    <nav>
+                        <a href="#menu">Menu</a>
+                    </nav>
+                </header>
 
-				<!-- Menu -->
-					<nav id="menu">
-						<div class="inner">
-							<h2>Menu</h2>
-							<ul class="links">
-								<li><a href="index.html">Home</a></li>
-								<li><a href="generic.html">Generic</a></li>
-								<li><a href="elements.html">Elements</a></li>
-								<li><a href="#">Log In</a></li>
-								<li><a href="#">Sign Up</a></li>
-							</ul>
-							<a href="#" class="close">Close</a>
-						</div>
-					</nav>
+            <!-- Menu -->
+                <nav id="menu">
+                    <div class="inner">
+                        <h2>Menu</h2>
+                        <ul class="links">
+                            <li><a href="index.html">Home</a></li>
+                            <li><a href="generic.html">Generic</a></li>
+                            <li><a href="elements.html">Elements</a></li>
+                            <li><a href="projects.html">Projects</a></li>
+                        </ul>
+                        <a href="#" class="close">Close</a>
+                    </div>
+                </nav>
 
 				<!-- Wrapper -->
-                <section id="wrapper">
+                <section id="banner" class="style2">
                     <header>
                         <div class="inner">
-                            <h2>All me personal projects</h2>
+                            <h2>Projects</h2>
                             <p>Included are descriptions, skills I learned, GitHub links, and some live versions.</p>
                         </div>
                     </header>
-
+			
                     <!-- Content -->
                         <div class="wrapper">
                             <div class="inner">
