--- a/index.html
+++ b/index.html
@@ -32,6 +32,9 @@
 								<li><a href="index.html">Home</a></li>
 								<li><a href="generic.html">Generic</a></li>
 								<li><a href="elements.html">Elements</a></li>
+								<li><a href="projects.html">Projects</a></li>
+								<li><a href="work_experience.html">Professional Experience</a></li>
+								<li><a href="coursework.html">Coursework</a></li>
 							</ul>
 							<a href="#" class="close">Close</a>
 						</div>
